Add Movies#create endpoint with rswag test
