# app/controllers/api/v1/movies_controller.rb
@@ -1,4 +1,4 @@
-class Api::V1::MoviesController < ApplicationController
+class Api::V1::MoviesController < Api::BaseController
   def index
     @movies = Movie.page(params[:page]).per(params[:per_page])
 
@@ -11,5 +11,23 @@ class Api::V1::MoviesController < ApplicationController
         per_page: @movies.limit_value
       }
     }
+  end
+
+  def create
+    @movie = Movie.new(movie_params)
+
+    if @movie.save
+      render json: { data: @movie }, status: :created
+    else
+      render json: {
+        errors: @movie.errors.full_messages
+      }, status: :unprocessable_entity
+    end
+  end
+
+  private
+
+  def movie_params
+    params.require(:movie).permit(:title, :description, :release_year)
   end
 end
